<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  홈 탭 사용   -->
    <string name="hello">안녕하세요 :)</string>
    <string name="display_points">320 포인트가 모였어요!</string>
    <string name="btn_map">오늘은 주변의 어떤 음식점을 찾으시나요?</string>
    <string name="recycle_method">음식점 카테고리</string>
    <string name="search_text">검색어를 입력해주세요</string>

    <!--    마이페이지 탭 사용-->
    <string name="myPage">마이페이지</string>
    <string name="support">고객지원</string>
    <string name="faq">자주 묻는 질문</string>
    <string name="notice">공지사항</string>
    <string name="terms_policy">약관 및 정책</string>
    <string name="settings">설정</string>
    <string name="profile_settings">프로필 설정</string>
    <string name="notification_settings">알림 설정</string>

    <string name="nickname">닉네임</string>
    <string name="save">저장</string>
    <string name="sign_out">로그아웃</string>

    <!-- common -->
    <string name="user_name">이름</string>
    <string name="user_email">이메일</string>
    <string name="point">0P</string>

    <!--    툴바 -->
    <string name="toolbar_title">페이지 이름 등록(각 프래그먼트)</string>
    <string name="search">검색</string>
    <string name="chat">채팅</string>

    <!-- 바텀네비게이션 뷰  -->
    <string name="home">홈</string>
    <string name="community">커뮤니티</string>
    <string name="map">지도</string>

    <!-- community-->
    <string name="recy_talk">Recy-Talk</string>
    <string name="recy_talk_description">환경을 사랑하는 리사이크루들의 소통의 장! 환경에 대한 자유로운 이야기로 나눠요🍀</string>

    <string name="recy_giveaway">Recy-Giveaway</string>
    <string name="recy_giveaway_description">환경을 사랑하는 리사이크루들의 나눔의 장! 서로에게 필요한 제품을 나누며 환경을 지켜요💚</string>

    <string name="recy_meetup">Recy-Meetup</string>
    <string name="recy_meetup_description">환경에 진심인 크루들의 모임의 장! 함께 모여 플로깅을 하며 건강과 환경을 지켜요🌱</string>
    <string name="play">더보기</string>

    <!-- FAQ, Notice   -->
    <string name="category">카테고리</string>
    <string name="title">제목</string>
    <string name="question">질문</string>

    <!-- SignInActivity    -->
    <string name="welcome_message">반가워요 회원님!</string>


    <!-- MyPage  -->
    <string name="guest">Guest</string>
    <string name="needLogin">로그인이 필요합니다.</string>

    <!-- EditProfile   -->
    <string name="nickname_available_message">사용 가능한 닉네임입니다.</string>
    <string name="nickname_duplicate_message">이미 존재하는 닉네임입니다.</string>
    <string name="nickname_error_message">잘못된 닉네임입니다.</string>
    <string name="nickname_empty_message">닉네임을 입력해주세요.</string>

    <string name="no_input_message">변경된 점이 없습니다.</string>
    <string name="update_failed_message">프로필 업데이트에 실패하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="need_select_image">이미지를 선택하지 않았습니다.</string>
    <string name="error">Error: %1$s</string>
    <string name="sign_out_failed_message">로그아웃에 실패했습니다.</string>


    <!-- homeFragment    -->
    <string name="label">Label</string>

    <!-- RestaurantFragment   -->
    <string name="lotNumber_address">지번주소</string>
    <string name="roadName_address">도로명주소</string>
    <string name="distance">나와의 거리 %1$s m</string>
    <string name="phone_number">업체 번호</string>
    <string name="place_url">업체 링크</string>
    <string name="meter">%1$s m</string>

    <!-- ParkingLot(SurroundingFragment) -->
    <string name="parking_lot_id">주차장ID</string>
    <string name="address">주소</string>
    <string name="latitude">위도</string>
    <string name="longitude">경도</string>
    <string name="capacity">주차구획수</string>

    <!-- Weather(SurroundingFragment) -->
    <string name="time">시간</string>
    <string name="condition">상태</string>
    <string name="temperature">기온</string>
    <string name="edittext_hint">다른 이용자를 위한 솔직한 리뷰를 남겨주세요!</string>
    <string name="add">등록</string>
    <string name="comment">이것은 댓글 내용입니다. 여러 줄로 작성될 수 있습니다.</string>

    <!--    Map     -->
    <string name="filter">Filter</string>

    <!-- Home    -->
    <string name="recommended_keyword">추천검색어</string>
    <string name="user_update_error">유저 업데이트에 실패했습니다.</string>
    <string name="korean_food">한식</string>
    <string name="chinese_food">중식</string>
    <string name="western_food">양식</string>
    <string name="japanese_food">일식</string>
    <string name="asian_food">아시아음식</string>
    <string name="bunsik_food">분식</string>
    <string name="chicken">치킨</string>
    <string name="gukbap">국밥</string>
    <string name="grilled_meat">고기</string>
    <string name="seafood">회/해물</string>
    <string name="buffet">뷔페</string>
    <string name="fastfood">패스트푸드</string>

    <!--  restaurantDetail  -->
    <string name="favorite">찜</string>
    <string name="share">공유</string>
    <string name="kakaotalk_playstorelink">market://details?id=com.kakao.talk</string>
    <string name="kakaotalk_weblink">https://play.google.com/store/apps/details?id=com.kakao.talk</string>
    <string name="navigate">길찾기</string>

    <!-- Common   -->
    <string name="no_data">데이터가 없습니다.</string>

    <!-- SurroudingFragment.xml   -->
    <string name="subway_description">🚇 주변 지하철역을 확인하고 이동해보세요! \n 길찾기 시스템도 있답니다.</string>
    <string name="weather_description">☀️ 현재 날씨 정보 식당 주변 날씨를 확인해보세요! \n 계획한 하루가 완벽해질 수 있도록.</string>

    <!-- ReviewFragment.xml   -->
    <string name="review_description">💬 리뷰를 작성하고 공유하세요! \n 다른 사용자들의 후기도 확인할 수 있어요.</string>

    <!-- InfoFragment.xml   -->
    <string name="blog_info_description">🔍 블로그 리뷰를 확인하세요! \n 실제 방문자들의 경험과 유용한 팁을 만나보세요.</string>

</resources>