<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FragmentPaddingStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_images"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 하트 버튼 추가 -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/favorite_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/favorite"
        android:focusable="true"
        android:src="@drawable/ic_heart_empty_24"
        app:layout_constraintEnd_toEndOf="@id/restaurant_images"
        app:layout_constraintTop_toTopOf="@id/restaurant_images" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/restaurant_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="restaurant_title, restaurant_distance,restaurant_lotNumber_address, restaurant_roadName_address, restaurant_number, restaurant_webpage"
        app:flow_maxElementsWrap="2"
        app:flow_wrapMode="chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_images" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/restaurant_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="@id/restaurant_description"
        app:layout_constraintTop_toTopOf="@id/restaurant_description" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/restaurant_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_name_to_distance"
        android:text="@string/distance"
        android:textColor="@color/primary_color"
        app:layout_constraintStart_toEndOf="@id/restaurant_title"
        app:layout_constraintTop_toTopOf="@id/restaurant_description" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/restaurant_lotNumber_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lotNumber_address"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/restaurant_description"
        app:layout_constraintTop_toBottomOf="@id/restaurant_roadName_address" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/restaurant_roadName_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roadName_address"
        app:layout_constraintStart_toStartOf="@id/restaurant_description"
        app:layout_constraintTop_toBottomOf="@id/restaurant_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/restaurant_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@id/restaurant_webpage"
        app:layout_constraintEnd_toEndOf="@id/restaurant_description"
        app:layout_constraintTop_toTopOf="@id/restaurant_description" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/restaurant_webpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_url"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant_description"
        app:layout_constraintEnd_toEndOf="@id/restaurant_description" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_tab"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids="tabs,tab_content"
        app:flow_verticalGap="5dp"
        app:flow_verticalStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_description" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        app:tabIndicatorColor="@color/primary_color"
        app:tabIndicatorFullWidth="false"
        app:tabMode="scrollable"
        app:tabPaddingEnd="16dp"
        app:tabPaddingStart="16dp"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/tab_text"
        app:tabTextColor="@color/gray" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/tab_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />

</androidx.constraintlayout.widget.ConstraintLayout>